# knockknock

./: .gitignore
compose/: docker-compose-dev.yml
knock_knock/: manage.py  pyproject.toml
knock_knock/camera/: models.py  serializers.py  urls.py  views.py
knock_knock/docker/development/: Dockerfile
knock_knock/env/development/: .db.env  .env  .sample.env
knock_knock/knock_knock/: asgi.py  urls.py  wsgi.py
knock_knock/knock_knock/settings/: common.py  development.py
knock_knock_frontend/: package.json
knock_knock_frontend/docker/development/: Dockerfile
knock_knock_frontend/src/: App.js
